@@ -2,7 +2,6 @@
   . zip_close: close za->zp before rename, reopen on error
   . HAVE_UNISTD_H
 * fix distcheck (3 tests fail, I don't understand why)
-* make zip_add return index of new file entry
 * add functions to:
   . set compression method for new/changed entry
   . set last modification time for entry
