@@ -1,7 +1,7 @@
-.\" $NiH: zip_add.mdoc,v 1.8 2005/06/09 21:13:12 wiz Exp $
+.\" $NiH: zip_add.mdoc,v 1.9 2005/06/09 21:14:54 wiz Exp $
 .\"
 .\" zip_add.mdoc -- add files to zip archive
-.\" Copyright (C) 2004, 2005 Dieter Baron and Thomas Klausner
+.\" Copyright (C) 2004, 2005, 2006 Dieter Baron and Thomas Klausner
 .\"
 .\" This file is part of libzip, a library to manipulate ZIP archives.
 .\" The authors can be contacted at <nih@giga.or.at>
@@ -31,7 +31,7 @@
 .\" OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN
 .\" IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd November 30, 2004
+.Dd April 9, 2006
 .Dt ZIP_ADD 3
 .Os
 .Sh NAME
@@ -72,7 +72,8 @@ See the
 functions cited in
 .Sx SEE ALSO .
 .Sh RETURN VALUES
-Upon successful completion 0 is returned.
+Upon successful completion, the index of the new file in the archive
+is returned.
 Otherwise, \-1 is returned and the error code in
 .Ar archive
 is set to indicate the error.
